# glib-examples

./: .cproject  .gitignore  .project  Makefile  Makefile.in  autogen.sh  configure.ac
src/: hello-world.c  hello-world.h
